--- a/getLoader2Args/Makefile
+++ b/getLoader2Args/Makefile
@@ -1,6 +1,6 @@
 getLoader2Args: getLoader2Args.o
-	arm-elf-gcc getLoader2Args.c -o getLoader2Args -elf2flt
+	arm-elf-gcc getLoader2Args.c -o getLoader2AutoExec -elf2flt
 #getLoader2Args.o: getLoader2Args.c
 clean:
-	rm -f getLoader2Args *.o
+	rm -f getLoader2AutoExec getLoader2AutoExec.gdb *.o
 .PHONY: clean
